--- a/app/partials/video-directive.html
+++ b/app/partials/video-directive.html
@@ -1,3 +1,3 @@
 <div class="videoCont">
-    <script src="{{videoUrl}}" type="text/javascript"></script>
+    <script ng-src="{{videoUrl}}" type="text/javascript"></script>
 </div>
