--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 <div class="col-sm-7">
-<div class="is-home-content">
+<div class="is-home-content" ng-controller="articleListCtrl">
 
     <div class="panel">
         <div class="panel-body">
@@ -58,7 +58,7 @@
             </form>
         </div>
     </div>
-    <div class="msgs-container" ng-controller="msgListCtrl">
+    <div class="msgs-container" >
         <div class="panel panel-filter">
             <div class="panel-body">
                 <div class="btn-group btn-group-filter">
