--- a/app/css/global.css
+++ b/app/css/global.css
@@ -8,3 +8,204 @@ body {
 textarea{
     resize: vertical;
 }
+/* icons */
+.icon{
+    display: inline-block;
+    vertical-align: middle;
+    width:30px;
+    height: 30px;
+    background-image: url('../images/icon.png');
+    background-repeat: no-repeat;
+}
+.icon-white, a:hover .icon-light-hover,.active .icon{
+    background-image: url('../images/icon-white.png');
+}
+.icon-sm{
+    width: 20px;
+    height: 20px;
+}
+.icon-evelope{
+    background-position: 0 0;
+}
+.icon-user{
+    background-position: 0 -30px;
+}
+.icon-logout{
+    background-position: 0 -60px;
+}
+.icon-home{
+    background-position: 0 -90px;
+}
+.icon-newspaper{
+    background-position: 0 -120px;
+}
+.icon-comment{
+    background-position: 0 -150px;
+}
+.icon-heart-empty{
+    background-position: 0 -180px;
+}
+.icon-cog{
+    background-position: 0 -210px;
+}
+.icon-cloud{
+    background-position: right 0;
+}
+.icon-card{
+    background-position: right -30px;
+}
+.icon-list{
+    background-position: right -60px;
+}
+.icon-briefcase{
+    background-position: right -90px;
+}
+.icon-webpage{
+    background-position: right -120px;
+}
+.icon-inbox{
+    background-position: right -150px;
+}
+.icon-file{
+    background-position: right -240px;
+}
+.icon-gps{
+    background-position: right -260px;
+}
+.icon-video{
+    background-position: right -280px;
+}
+.icon-audio{
+    background-position: right -300px;
+}
+.icon-link{
+    background-position: right -320px;
+}
+.icon-img{
+    background-position: right -340px;
+}
+.icon-comment-blue{
+    background-position: 0 -240px;
+}
+.icon-thumb-up-blue{
+    background-position: 0 -260px;
+}
+.icon-transmit-blue{
+    background-position: 0 -280px;
+}
+.icon-reply-blue{
+    background-position: 0 -300px;
+}
+.icon-share-blue{
+    background-position: 0 -320px;
+}
+.icon-heart-empty-blue{
+    background-position: 0 -340px;
+}
+.icon-file-blue{
+    background-position: 0 -360px;
+}
+.icon-img-blue{
+    background-position: 0 -380px;
+}
+.icon-arrow-left-blue {
+    background-position: -30px -240px;
+}
+.icon-arrow-right-blue {
+    background-position: -30px -260px;
+}
+.icon-loading-blue {
+    background-position: -30px -280px;
+}
+.icon-cross-blue {
+    background-position: -30px -300px;
+}
+
+.icon-dot-msg{
+    width: 10px;
+    height: 10px;
+    margin-right: -10px;
+    background-position: -20px -240px;
+}
+.circle-blue-bg {
+    background: #37b0e9;
+    border-radius: 50%;
+}
+
+/* navbar */
+.navbar{
+    background-color: #2f2f2f;
+}
+.navbar-brand{
+    background: url('../images/logo.png') no-repeat center center;
+    width: 87px;
+    height: 54px;
+}
+.is-navbar-collapse .navbar-nav > li > a{
+    line-height: 24px;
+    font-size: 16px;
+    color: #5f5f5f;
+}
+.is-navbar-collapse .navbar-icons > li > a{
+    padding: 12px 15px;
+}
+.navbar-form{
+    margin-top: 11px;
+    margin-bottom: 11px;
+}
+.navbar-form .form-group .form-control{
+    font-size: 16px;
+    border-radius: 15px;
+    height: 32px;
+    padding: 5px 15px 5px 50px;
+    background-color: #121415;
+    border: none;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.75);
+}
+.navbar-form .form-group {
+    position: relative;
+    color: #5c5c5c;
+}
+.navbar-form .form-group .glyphicon{
+    font-size: 20px;
+    color: #5c5c5c;
+    position: absolute;
+    left: 20px;
+    top: 6px;
+}
+/* Responsive: Portrait tablets and up */
+@media (min-width: 768px) {
+    .is-navbar-nav{
+        padding-right: 20px;
+    }
+    .navbar-form .form-group .form-control{
+        width: 280px;
+    }
+}
+/* Responsive: 宽屏或更大 */
+@media (min-width: 1200px) {
+    .is-navbar-nav{
+        padding-right: 40px;
+    }
+    .navbar-form .form-group .form-control{
+        width: 320px;
+    }
+    .is-navbar-collapse .navbar-nav > li > a {
+        padding: 15px 20px;
+    }
+    .is-navbar-collapse .navbar-icons > li > a{
+        padding: 12px 30px;
+    }
+}
+
+
+/* footer */
+footer{
+    margin-top: 20px;
+    background-color: #ffffff;
+    color: #4e4e4e;
+    height: 175px;
+    text-align: center;
+    padding-top: 20px;
+}
+
